radovi na sajtu

--- a/golden_touch.html
+++ b/golden_touch.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/styles.css" />
 </head>
 
-<body class="all-other-bg">
+<body class="goldentouch-bg">
     <div class="main-page">
         <div class="row navigation">
             <nav class="navbar navbar-expand-lg navbar-dark">
@@ -52,6 +52,69 @@
                     </ul>
                 </div>
             </nav>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row main-body">
+            <div class="main-gt">
+                <img src="./images/zlatna_kolekcija/27.jpg" alt="">
+            </div>
+        </div>
+        <div class="row main-body">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/13.jpg" alt="">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/14.jpg" alt="">
+            </div>
+        </div>
+        <div class="row main-body">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/15.jpg" alt="">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/16.jpg" alt="">
+            </div>
+        </div>
+        <div class="row main-body">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/17.jpg" alt="">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/18.jpg" alt="">
+            </div>
+        </div>
+        <div class="row main-body">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/19.jpg" alt="">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/20.jpg" alt="">
+            </div>
+        </div>
+        <div class="row main-body">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/21.jpg" alt="">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/22.jpg" alt="">
+            </div>
+        </div>
+        <div class="row main-body">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/23.jpg" alt="">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/24.jpg" alt="">
+            </div>
+        </div>
+        <div class="row main-body">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/25.jpg" alt="">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/zlatna_kolekcija/26.jpg" alt="">
+            </div>
         </div>
     </div>
     <script src="./js/jquery-3.3.1.min.js"></script>
