--- a/shine_bright.html
+++ b/shine_bright.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/styles.css" />
 </head>
 
-<body class="all-other-bg">
+<body class="shinebright-bg">
     <div class="main-page">
         <div class="row navigation">
             <nav class="navbar navbar-expand-lg navbar-dark">
@@ -52,6 +52,53 @@
                     </ul>
                 </div>
             </nav>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row main-body">
+            <div class="main-sb">
+                <img src="./images/dijamant_kolekcija/11.jpg" alt="">
+            </div>
+        </div>
+        <div class="row main-body">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/dijamant_kolekcija/1.jpg" alt="">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/dijamant_kolekcija/2.jpg" alt="">
+            </div>
+        </div>
+        <div class="row main-body">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/dijamant_kolekcija/3.jpg" alt="">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/dijamant_kolekcija/4.jpg" alt="">
+            </div>
+        </div>
+        <div class="row main-body">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/dijamant_kolekcija/5.jpg" alt="">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/dijamant_kolekcija/6.jpg" alt="">
+            </div>
+        </div>
+        <div class="row main-body">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/dijamant_kolekcija/7.jpg" alt="">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/dijamant_kolekcija/8.jpg" alt="">
+            </div>
+        </div>
+        <div class="row main-body">
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/dijamant_kolekcija/9.jpg" alt="">
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+                <img src="./images/dijamant_kolekcija/10.jpg" alt="">
+            </div>
         </div>
     </div>
     <script src="./js/jquery-3.3.1.min.js"></script>
