--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
     <div class="container">
         <h2>About Kristina Bartuš</h2>
         <div class="row">
-            <div class="col-sm-6 col-md-6 col-lg-6">
+            <div class="col-sm-6 col-md-6 col-lg-6 about">
                 <img src="images/dijamant_kolekcija/11.jpg" class="about-img">
             </div>
             <div class="col-sm-6 col-md-6 col-lg-6">
