--- a/golden_touch.html
+++ b/golden_touch.html
@@ -14,7 +14,7 @@
 <body class="goldentouch-bg">
     <div class="main-page">
         <div class="row navigation">
-            <nav class="navbar navbar-expand-lg navbar-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark black-font">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
