--- a/women.html
+++ b/women.html
@@ -129,7 +129,7 @@
             <div class="col-sm-6 col-md-6 col-lg-3">
                 <img src="./images/zlatna_kolekcija/26.jpg" alt="">
             </div>
-            <div class="col-sm-6 col-md-6 col-lg-3">
+            <div class="col-sm-6 col-md-6 col-lg-3 last">
                 <p>Tank Top 24.000 RSD <br>Skirt 23.000 RSDd</p>
             </div>
         </div>
