--- a/home.html
+++ b/home.html
@@ -12,54 +12,59 @@
 </head>
 
 <body class="home-bg">
-    <div class="container">
-      <div class="row navigation">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="./home.html">Home<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./about.html">About</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
-                  Collections
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="./shine_bright.html">Shine Bright</a>
-                  <a class="dropdown-item" href="./golden_touch.html">Golden Touch</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./women.html">Women</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./men.html">Men</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./video.html">Video</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
+  <div class="container">
+    <div class="row navigation">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="./home.html">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./about.html">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
+                Collections
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="./shine_bright.html">Shine Bright</a>
+                <a class="dropdown-item" href="./golden_touch.html">Golden Touch</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./women.html">Women</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./men.html">Men</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./video.html">Video</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
-  <div class="container-fluid">
+  </div>
+  <div class="container">
     <div class="row main-body">
-      <h2 class="h2-naslov">Welcome to official website</h2>
-    </div>
-      <img class="hp-img" src="./images/dijamant_kolekcija/11.jpg" alt="">
-    <div>
-      <h1 class="h1-naslov">Kristina Bartus Design</h1>
+      <div>
+        <h2 class="h2-naslov">Welcome to official website</h2>
+      </div>
+      <div>
+        <img class="hp-img1" src="./images/zlatna_kolekcija/27.jpg" alt="">
+        <img class="hp-img2" src="./images/dijamant_kolekcija/11.jpg" alt="">
+      </div>
+      <div>
+        <h1 class="h1-naslov">Kristina Bartus Design</h1>
+      </div>
     </div>
   </div>
 
