--- a/women.html
+++ b/women.html
@@ -125,7 +125,7 @@
                 <p>T-Shirt 21.000 RSD <br> Leggings 23.000 RSD</p>
             </div>
         </div>
-        <div class="row main-body">
+        <div class="row main-body last">
             <div class="col-sm-6 col-md-6 col-lg-3">
                 <img src="./images/zlatna_kolekcija/26.jpg" alt="">
             </div>
