--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
       </nav>
     </div>
   </div>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row main-body">
       <div>
         <h2 class="h2-naslov">Welcome to official website</h2>
@@ -67,7 +67,7 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <div class="container-fluid">
       <div class="row footer">
           <div class="footer">
               <p>Website designd by: Marko Jordanovic</p>
