--- a/men.html
+++ b/men.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="./home.html">Home<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="./index.html">Home<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./about.html">About</a>
