--- a/women.html
+++ b/women.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="./index.html">Home<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="./home.html">Home<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./about.html">About</a>
@@ -125,7 +125,7 @@
                 <p>T-Shirt 21.000 RSD <br> Leggings 23.000 RSD</p>
             </div>
         </div>
-        <div class="row main-body last">
+        <div class="row main-body">
             <div class="col-sm-6 col-md-6 col-lg-3">
                 <img src="./images/zlatna_kolekcija/26.jpg" alt="">
             </div>
