--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid">
+  <div class="container">
       <div class="row footer">
           <div class="footer">
               <p>Website designd by: Marko Jordanovic</p>
